code/force-app/main/default/objects/Account/fields/Account_Develop_Source__c.field-meta.xml
<CustomField>
    <fullName>Account_Develop_Source__c</fullName>
    <label>客戶開發來源</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>分行轉介（分行轉介商機轉換）</fullName>
            </value>
            <value>
                <fullName>法金轉介-國內法轉法（國內法轉法商機轉換）</fullName>
            </value>
            <value>
                <fullName>法金轉介-跨國法轉法（跨國法轉法商機轉換）</fullName>
            </value>
            <value>
                <fullName>公司派件-拓客名單（派發商機轉換-拓客）</fullName>
            </value>
            <value>
                <fullName>公司派件-企個名單（派發商機轉換-企個）</fullName>
            </value>
            <value>
                <fullName>公司派件-一般名單（派發商機轉換-一般）</fullName>
            </value>
            <value>
                <fullName>公司派件-TMRAC（派發商機轉換而來-TMRAC）</fullName>
            </value>
            <value>
                <fullName>全新開發（自建商機轉換/全新建立帳戶）</fullName>
            </value>
            <value>
                <fullName>TEJ客戶（預佔當下，帳戶原始資料來源欄位=TEJ）</fullName>
            </value>
            <value>
                <fullName>既有客戶（其他SF帳戶預佔）</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>