code/force-app/main/default/objects/Account/fields/Account_Key_Formula__c.field-meta.xml
<CustomField>
    <fullName>Account_Key_Formula__c</fullName>
    <formula>TEXT(Customer_Data_Country__c) &amp; TEXT(Identification_Type__c) &amp; Customer_ID__c</formula>
    <label>帳戶Key值</label>
    <type>Text</type>
</CustomField>