code/force-app/main/default/objects/Account/fields/Account_Key_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Key_Id__c</fullName>
    <externalId>true</externalId>
    <label>客戶識別碼</label>
    <length>200</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>