code/force-app/main/default/objects/Account/fields/Account_Key_Id_Auto__c.field-meta.xml
<CustomField>
    <fullName>Account_Key_Id_Auto__c</fullName>
    <formula>Text(Customer_Data_Country__c)+ Text( Identification_Type__c )+ Customer_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>客戶識別碼 (Auto)</label>
    <type>Text</type>
</CustomField>