code/force-app/main/default/objects/Account/fields/Account_Name_Secondary_Language__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_Secondary_Language__c</fullName>
    <label>客戶名稱 (次要語言)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>