code/force-app/main/default/objects/Account/fields/Account_Unit_Difference__c.field-meta.xml
<CustomField>
    <fullName>Account_Unit_Difference__c</fullName>
    <formula>if( Text(Team__c) = text(Owner.Team__c),false,true )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>帳戶擁有者與帳戶所屬單位(科別)不同</label>
    <type>Checkbox</type>
</CustomField>