code/force-app/main/default/objects/Account/fields/Acquiring__c.field-meta.xml
<CustomField>
    <fullName>Acquiring__c</fullName>
    <defaultValue>false</defaultValue>
    <label>收單</label>
    <type>Checkbox</type>
</CustomField>