code/force-app/main/default/objects/Account/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <formula>TEXT(ROUND((TODAY() - Date_Of_Establishment__c)/365, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>企業商齡(年)</label>
    <type>Text</type>
</CustomField>