code/force-app/main/default/objects/Account/fields/AR__c.field-meta.xml
<CustomField>
    <fullName>AR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>應收帳款</label>
    <type>Checkbox</type>
</CustomField>