code/force-app/main/default/objects/Account/fields/Blacklist__c.field-meta.xml
<CustomField>
    <fullName>Blacklist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>黑名單</label>
    <type>Checkbox</type>
</CustomField>