code/force-app/main/default/objects/Account/fields/Branch_Referral_No__c.field-meta.xml
<CustomField>
    <fullName>Branch_Referral_No__c</fullName>
    <label>分行轉介單號(外部轉法)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>