code/force-app/main/default/objects/Account/fields/Business_Address_Primary__c.field-meta.xml
<CustomField>
    <fullName>Business_Address_Primary__c</fullName>
    <label>主要營業地地址</label>
    <type>Address</type>
</CustomField>