code/force-app/main/default/objects/Account/fields/Business_Association_Established__c.field-meta.xml
<CustomField>
    <fullName>Business_Association_Established__c</fullName>
    <defaultValue>false</defaultValue>
    <label>建立業務往來</label>
    <type>Checkbox</type>
</CustomField>