code/force-app/main/default/objects/Account/fields/Business_Structure__c.field-meta.xml
<CustomField>
    <fullName>Business_Structure__c</fullName>
    <label>公司組織型態</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01-國內上市公司</fullName>
            </value>
            <value>
                <fullName>02-國內上櫃公司</fullName>
            </value>
            <value>
                <fullName>03-國內興櫃公司</fullName>
            </value>
            <value>
                <fullName>04-國內公開發行公司</fullName>
            </value>
            <value>
                <fullName>05-國內非公開發行公司</fullName>
            </value>
            <value>
                <fullName>06-國外上市公司</fullName>
            </value>
            <value>
                <fullName>07-國外非上市公司</fullName>
            </value>
            <value>
                <fullName>08-信託、基金及其他金融工具</fullName>
            </value>
            <value>
                <fullName>09-國內非公司組織</fullName>
            </value>
            <value>
                <fullName>10-獨資</fullName>
            </value>
            <value>
                <fullName>11-合夥</fullName>
            </value>
            <value>
                <fullName>12-籌備處或籌備公司</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>