code/force-app/main/default/objects/Account/fields/CBC_Industry__c.field-meta.xml
<CustomField>
    <fullName>CBC_Industry__c</fullName>
    <label>央行放款對象別</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>030100</fullName>
                <label>中央政府機關</label>
            </value>
            <value>
                <fullName>030200</fullName>
                <label>地方政府機關</label>
            </value>
            <value>
                <fullName>040000</fullName>
                <label>社會保險及退休基金</label>
            </value>
            <value>
                <fullName>050000</fullName>
                <label>非營利團體</label>
            </value>
            <value>
                <fullName>060000</fullName>
                <label>私人</label>
            </value>
            <value>
                <fullName>070200</fullName>
                <label>外國及大陸銀行在台分行</label>
            </value>
            <value>
                <fullName>070400</fullName>
                <label>信用合作社</label>
            </value>
            <value>
                <fullName>070500</fullName>
                <label>農漁會信用部</label>
            </value>
            <value>
                <fullName>070600</fullName>
                <label>郵政公司儲匯處(不含壽險處)</label>
            </value>
            <value>
                <fullName>070800</fullName>
                <label>人壽保險公司(含郵政壽險處)</label>
            </value>
            <value>
                <fullName>070900</fullName>
                <label>本國銀行</label>
            </value>
            <value>
                <fullName>080000</fullName>
                <label>產物保險公司</label>
            </value>
            <value>
                <fullName>090000</fullName>
                <label>票券金融公司</label>
            </value>
            <value>
                <fullName>100000</fullName>
                <label>證券金融公司</label>
            </value>
            <value>
                <fullName>110000</fullName>
                <label>再保險公司</label>
            </value>
            <value>
                <fullName>120000</fullName>
                <label>存款保險公司（中央存款保險公司）</label>
            </value>
            <value>
                <fullName>130100</fullName>
                <label>國外金融機構（不含OIU）</label>
            </value>
            <value>
                <fullName>130200</fullName>
                <label>國外非金融機構（不含OSU）</label>
            </value>
            <value>
                <fullName>130300</fullName>
                <label>國際證券業務分公司（OSU）</label>
            </value>
            <value>
                <fullName>130400</fullName>
                <label>國際保險業務分公司（OIU）</label>
            </value>
            <value>
                <fullName>960210</fullName>
                <label>納閩島個人戶</label>
            </value>
            <value>
                <fullName>960220</fullName>
                <label>納閩島公司戶</label>
            </value>
            <value>
                <fullName>999999</fullName>
                <label>其他</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>