code/force-app/main/default/objects/Account/fields/Check_KYC__c.field-meta.xml
<CustomField>
    <fullName>Check_KYC__c</fullName>
    <label>檢查KYC筆數</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>