code/force-app/main/default/objects/Account/fields/CUB_External_Id__c.field-meta.xml
<CustomField>
    <fullName>CUB_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>CUB External ID</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>