code/force-app/main/default/objects/Account/fields/Customer_Data_Country__c.field-meta.xml
<CustomField>
    <fullName>Customer_Data_Country__c</fullName>
    <label>客戶資料國別</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CUB_Country</valueSetName>
    </valueSet>
</CustomField>