code/force-app/main/default/objects/Account/fields/Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>Customer_ID__c</fullName>
    <externalId>true</externalId>
    <label>客戶 ID</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>