code/force-app/main/default/objects/Account/fields/Data_From_Non_SF__c.field-meta.xml
<CustomField>
    <fullName>Data_From_Non_SF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>資料來自外部系統</label>
    <type>Checkbox</type>
</CustomField>