code/force-app/main/default/objects/Account/fields/Date_Of_Establishment__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Establishment__c</fullName>
    <label>註冊日期</label>
    <type>Date</type>
</CustomField>