code/force-app/main/default/objects/Account/fields/Deposit__c.field-meta.xml
<CustomField>
    <fullName>Deposit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>存款</label>
    <type>Checkbox</type>
</CustomField>