code/force-app/main/default/objects/Account/fields/Deposit_Balance__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Balance__c</fullName>
    <label>存款餘額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>