code/force-app/main/default/objects/Account/fields/Earliest_NonCredit_Date__c.field-meta.xml
<CustomField>
    <fullName>Earliest_NonCredit_Date__c</fullName>
    <label>非授信戶最早往來日期</label>
    <type>Date</type>
</CustomField>