code/force-app/main/default/objects/Account/fields/Earliest_NonCredit_ddMM__c.field-meta.xml
<CustomField>
    <fullName>Earliest_NonCredit_ddMM__c</fullName>
    <formula>TEXT(DAY(Earliest_NonCredit_Date__c)) + &apos;/&apos; + TEXT(MONTH(Earliest_NonCredit_Date__c))</formula>
    <label>非授信戶最早往來月份</label>
    <type>Text</type>
</CustomField>