code/force-app/main/default/objects/Account/fields/ESG_Rating__c.field-meta.xml
<CustomField>
    <fullName>ESG_Rating__c</fullName>
    <label>ESG評等</label>
    <length>100</length>
    <type>Text</type>
</CustomField>