code/force-app/main/default/objects/Account/fields/Establishment_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Establishment_Expiry_Date__c</fullName>
    <label>註冊到期日</label>
    <type>Date</type>
</CustomField>