code/force-app/main/default/objects/Account/fields/Export_Bills_Negotiation__c.field-meta.xml
<CustomField>
    <fullName>Export_Bills_Negotiation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>出口押匯(含瑕疵)</label>
    <type>Checkbox</type>
</CustomField>