code/force-app/main/default/objects/Account/fields/Export_DA_DP__c.field-meta.xml
<CustomField>
    <fullName>Export_DA_DP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>出口D/A、D/P</label>
    <type>Checkbox</type>
</CustomField>