code/force-app/main/default/objects/Account/fields/Export_OA__c.field-meta.xml
<CustomField>
    <fullName>Export_OA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>出口OA</label>
    <type>Checkbox</type>
</CustomField>