code/force-app/main/default/objects/Account/fields/Facility__c.field-meta.xml
<CustomField>
    <fullName>Facility__c</fullName>
    <label>總集團總額度</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>