code/force-app/main/default/objects/Account/fields/Facility_Balance__c.field-meta.xml
<CustomField>
    <fullName>Facility_Balance__c</fullName>
    <label>集團總餘額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>