code/force-app/main/default/objects/Account/fields/FinServ__BankNumber__c.field-meta.xml
<CustomField>
    <fullName>FinServ__BankNumber__c</fullName>
    <label>Bank Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>