code/force-app/main/default/objects/Account/fields/FinServ__ClientCategory__c.field-meta.xml
<CustomField>
    <fullName>FinServ__ClientCategory__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Platinum</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Bronze</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>