code/force-app/main/default/objects/Account/fields/FinServ__CustomerSegment__c.field-meta.xml
<CustomField>
    <fullName>FinServ__CustomerSegment__c</fullName>
    <label>Customer Segment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mass Market</fullName>
            </value>
            <value>
                <fullName>Mass Affluent</fullName>
            </value>
            <value>
                <fullName>Wealth Accumulation</fullName>
            </value>
            <value>
                <fullName>Transactional</fullName>
            </value>
            <value>
                <fullName>Long Term Growth</fullName>
            </value>
            <value>
                <fullName>Borrower</fullName>
            </value>
            <value>
                <fullName>Millennial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>