code/force-app/main/default/objects/Account/fields/FinServ__LastUsedChannel__c.field-meta.xml
<CustomField>
    <fullName>FinServ__LastUsedChannel__c</fullName>
    <label>Last Used Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Web</fullName>
            </value>
            <value>
                <fullName>Branch</fullName>
            </value>
            <value>
                <fullName>Call Center</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>