code/force-app/main/default/objects/Account/fields/FinServ__MarketingSegment__c.field-meta.xml
<CustomField>
    <fullName>FinServ__MarketingSegment__c</fullName>
    <description>Market segments that characterize the client.</description>
    <label>Marketing Segment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mass Affluent</fullName>
            </value>
            <value>
                <fullName>High Net Worth</fullName>
            </value>
            <value>
                <fullName>Female Investor</fullName>
            </value>
            <value>
                <fullName>Millennial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>